# terminair

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  package-lock.json  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md
airterm/: __init__.py  __main__.py  app.py  cli.py  config.py  logging_utils.py  state.py
airterm/api/: client.py  models.py  poller.py
airterm/metrics/: aggregations.py  critical_path.py  error_extract.py
airterm/screens/: broken_summary.py  dag_deps.py  dag_detail.py  dag_graph.py  dag_runs.py  dags.py  health.py  import_errors.py  pools.py  resource_timeline.py  sla_misses.py  task_history.py  task_instances.py  watchlist.py  xcom_viewer.py
airterm/tests/: conftest.py  test_command_palette.py  test_config.py  test_event_log_loader.py  test_failure_heatmap.py  test_flash.py  test_metrics.py  test_read_only.py
airterm/themes/: dark.py  light.py
airterm/widgets/: box_plot.py  breadcrumb.py  command_palette.py  confirm_modal.py  filter_input.py  flash.py  footer_bar.py  header_bar.py  help_overlay.py  settings_drawer.py  status_bar.py
terminair/: __init__.py  __main__.py  app.py  cli.py  config.py  export.py  logging_utils.py
terminair/api/: client.py  models.py  poller.py
terminair/dbt/: __init__.py  aggregator.py  airflow_bridge.py  artifacts.py  manifest.py  mock_data.py  models.py  regression.py  snowflake_client.py
terminair/metrics/: aggregations.py  critical_path.py  (+2 more)
(+104 files in other folders)
