[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airterm"
version = "0.1.0"
description = "A k9s-style TUI for Apache Airflow"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Chaitanya"}]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "httpx>=0.27.0",
    "certifi>=2024.7.4",
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
gcp = ["google-auth>=2.0"]
aws = ["boto3>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[project.scripts]
airterm = "airterm.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = [
    "airterm.app",
    "airterm.api.models",
    "airterm.api.poller",
    "airterm.metrics.*",
    "airterm.screens.*",
    "airterm.tests.*",
    "airterm.widgets.*",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["airterm/tests"]
